--- a/wiki/index.html
+++ b/wiki/index.html
@@ -567,6 +567,10 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Development/OS-Linux--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Liberal arts-Literature--118161433</li>
@@ -849,6 +853,8 @@ Error message and password prompt
 
 <li>alpine</li>
 
+<li>async-signal-safe </li>
+
 <li>Backend</li>
 
 <li>Bash</li>
@@ -875,6 +881,8 @@ Error message and password prompt
 
 <li>Concept</li>
 
+<li>coredump</li>
+
 <li>core返回ip能连但running为false</li>
 
 <li>Debug</li>
@@ -888,6 +896,8 @@ Error message and password prompt
 <li>Formal language</li>
 
 <li>formal language</li>
+
+<li>GDB</li>
 
 <li>goalng CI build 二进制/tmp/zero-redis: No such file or directory</li>
 
@@ -913,15 +923,19 @@ Error message and password prompt
 
 <li>Idempotence</li>
 
+<li>IPC</li>
+
 <li>irqbalance</li>
 
 <li>Joe Armstrong</li>
 
+<li>kill</li>
+
 <li>Liberal arts</li>
 
-<li>linux</li>
-
 <li>Linux</li>
+
+<li>LinuxTools</li>
 
 <li>Literature</li>
 
@@ -971,6 +985,10 @@ Error message and password prompt
 
 <li>Reentrancy</li>
 
+<li>reentrancy</li>
+
+<li>reentrant</li>
+
 <li>regex</li>
 
 <li>Regular expression</li>
@@ -987,6 +1005,8 @@ Error message and password prompt
 
 <li>SIGINT</li>
 
+<li>SIGKILL</li>
+
 <li>Signal</li>
 
 <li>Signal experience</li>
@@ -996,6 +1016,8 @@ Error message and password prompt
 <li>SIGQUIT</li>
 
 <li>SIGSTOP</li>
+
+<li>SIGTERM</li>
 
 <li>stroll</li>
 
@@ -1023,6 +1045,10 @@ Error message and password prompt
 
 <li>WorkExperience</li>
 
+<li>中断</li>
+
+<li>内核态</li>
+
 <li>可重入vs幂等性</li>
 
 <li>听雨</li>
@@ -1030,6 +1056,8 @@ Error message and password prompt
 <li>广告词过滤</li>
 
 <li>抽象</li>
+
+<li>用户态</li>
 
 <li>美团ddd</li>
 
@@ -17454,8 +17482,8 @@ exports.context = contextWidget;
 <div created="20200625045609344" modified="20200625045609344" title="$:/state/folded/golang pitfall">
 <pre>hide</pre>
 </div>
-<div created="20200626103203889" modified="20200626103203889" title="$:/state/folded/Signal experience">
-<pre>hide</pre>
+<div created="20200626103203889" modified="20200628060101339" title="$:/state/folded/Signal experience">
+<pre>show</pre>
 </div>
 <div created="20200504152619555" modified="20200504152620688" title="$:/state/folded/Stroll layout cheat sheet">
 <pre>show</pre>
@@ -17562,7 +17590,7 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200625051821012" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200624162006372" modified="20200626125020480" title="$:/state/tab-1528275152">
+<div created="20200624162006372" modified="20200628082405475" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
 <div created="20200418121928767" modified="20200626110501153" title="$:/state/tab-1749438307">
@@ -17595,7 +17623,7 @@ exports.context = contextWidget;
 <div created="20200626102351509" modified="20200626102351889" title="$:/state/toc/Development-OS-779307917">
 <pre>close</pre>
 </div>
-<div created="20200626110558550" modified="20200626110559491" title="$:/state/toc/Linux-Signal-1152169851">
+<div created="20200626110558550" modified="20200628060156990" title="$:/state/toc/Linux-Signal-1152169851">
 <pre>close</pre>
 </div>
 <div created="20200623171543251" modified="20200626143155465" title="$:/state/toc/TableOfContents-Development--118161433">
@@ -17622,8 +17650,8 @@ exports.context = contextWidget;
 <div created="20200625051716578" modified="20200628053807915" title="$:/state/toc/TableOfContents/Development-Network--118161433">
 <pre>close</pre>
 </div>
-<div created="20200624161956789" modified="20200628053901858" title="$:/state/toc/TableOfContents/Development-OS--118161433">
-<pre>close</pre>
+<div created="20200624161956789" modified="20200628080813311" title="$:/state/toc/TableOfContents/Development-OS--118161433">
+<pre>open</pre>
 </div>
 <div created="20200624102744943" modified="20200627161307701" title="$:/state/toc/TableOfContents/Development-WorkExperience--118161433">
 <pre>open</pre>
@@ -17653,6 +17681,12 @@ exports.context = contextWidget;
 <pre>open</pre>
 </div>
 <div created="20200624162111260" modified="20200624162111260" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
+<pre>open</pre>
+</div>
+<div created="20200628080816068" modified="20200628080816068" title="$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433">
+<pre>open</pre>
+</div>
+<div created="20200628082857651" modified="20200628082857651" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
 <pre>open</pre>
 </div>
 <div created="20200624162617345" modified="20200624162910764" title="$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433">
@@ -17706,7 +17740,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200626105514614" list="Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628053821317" title="$:/StoryList">
+<div created="20200626105514614" list="可重入vs幂等性 StrollTips PCB SIGHUP SIGINT Signal SIGTERM [[graceful restart]] Bash [[graceful shutdown]] [[Signal experience]] Linux LinuxTools GDB IPC coredump SIGQUIT Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628121515617" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -18752,14 +18786,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200628053817225" title="$:/temp/search">
-<pre>Debug</pre>
+<div created="20200418122544376" modified="20200628121512792" title="$:/temp/search">
+<pre>reentrant</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200628053821170" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>calicao subnet not match the CIDR of a configured Calico IP Pool</pre>
+<div created="20200616161922967" modified="20200628080425762" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Signal</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -18909,6 +18943,9 @@ Two common classes of algebraic types are [[product type]]s (i.e., tuples and re
 <div created="20200619180319289" modified="20200619180319289" title="alpine">
 <pre></pre>
 </div>
+<div created="20200628121633232" modified="20200628121633232" title="async-signal-safe ">
+<pre></pre>
+</div>
 <div created="20200623172059355" modified="20200626110534227" tags="Development" title="Backend" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
@@ -19012,6 +19049,9 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 <div created="20200619185106853" modified="20200619185106853" title="Concept">
 <pre></pre>
 </div>
+<div created="20200628060004052" modified="20200628060004052" title="coredump">
+<pre></pre>
+</div>
 <div created="20200624102620351" modified="20200624102738733" tags="WorkExperience" title="core返回ip能连但running为false" type="text/x-markdown">
 <pre>[[host 模型]] 但是端口被占用了，创建容器以及assign ip成功，但实际上进程是fail的；
 </pre>
@@ -19037,6 +19077,12 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 </div>
 <div created="20200626103619996" modified="20200626103619996" title="formal language">
 <pre></pre>
+</div>
+<div created="20200628082813118" modified="20200628082854141" tags="LinuxTools" title="GDB" type="text/x-markdown">
+<pre>[[LinuxTools]]
+
+The GNU Debugger (GDB) is a portable debugger that runs on many Unix-like systems and works for many programming languages
+</pre>
 </div>
 <div created="20200617082304992" modified="20200626173132420" tags="linux Golang ci" title="goalng CI build 二进制/tmp/zero-redis: No such file or directory" type="text/x-markdown">
 <pre>[[Note]]
@@ -19157,10 +19203,18 @@ switch a, b:
 <div created="20200619184650746" modified="20200619184650746" title="Idempotence">
 <pre></pre>
 </div>
+<div created="20200628080725926" modified="20200628080749322" tags="Linux" title="IPC" type="text/x-markdown">
+<pre>[[Linux]]
+
+In computer science, inter-process communication or interprocess communication (IPC) refers specifically to the mechanisms an operating system provides to allow the processes to manage shared data.</pre>
+</div>
 <div created="20200628054351273" modified="20200628054351273" title="irqbalance">
 <pre></pre>
 </div>
 <div created="20200620041557875" modified="20200620041557875" title="Joe Armstrong">
+<pre></pre>
+</div>
+<div created="20200628075931593" modified="20200628075931593" title="kill">
 <pre></pre>
 </div>
 <div created="20200626125028177" modified="20200626125112424" tags="TableOfContents" title="Liberal arts" type="text/vnd.tiddlywiki">
@@ -19170,15 +19224,15 @@ switch a, b:
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200616145626359" modified="20200616145626359" title="linux">
-<pre></pre>
-</div>
 <div created="20200624161749867" modified="20200626110556116" tags="OS" title="Linux" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'Linux' sort[ind]&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20200628082330604" modified="20200628082359941" tags="Linux" title="LinuxTools">
+<pre>[[Linux]]</pre>
 </div>
 <div created="20200627161418593" modified="20200627161500323" tags="[[Liberal arts]]" title="Literature">
 <pre>[[Liberal arts]]</pre>
@@ -19313,6 +19367,12 @@ This is why structs are called “product types”.
 <div created="20200619184650746" modified="20200619184650746" title="Reentrancy">
 <pre></pre>
 </div>
+<div created="20200628121534466" modified="20200628121534466" title="reentrancy">
+<pre></pre>
+</div>
+<div created="20200628121633231" modified="20200628121633231" title="reentrant">
+<pre></pre>
+</div>
 <div created="20200626103619995" modified="20200626103619995" title="regex">
 <pre></pre>
 </div>
@@ -19372,17 +19432,39 @@ https://www.debuggex.com/cheatsheet/regex/pcre</pre>
 Sent when you hit CTRL+C
 Usually means &quot;stop what you're doing&quot; -- may or may not kill the program</pre>
 </div>
-<div created="20200619184942925" modified="20200624162124203" tags="Linux" title="Signal" type="text/x-markdown">
+<div created="20200628075931592" modified="20200628075931592" title="SIGKILL">
+<pre></pre>
+</div>
+<div created="20200619184942925" modified="20200628121633227" tags="IPC" title="Signal" type="text/x-markdown">
 <pre>[[Note]]
 [[Concept]]
 ## 信号的基本概念
+
+&gt; Signals are a limited form of inter-process communication ([[IPC]]), typically used in Unix, Unix-like, and other POSIX-compliant operating systems. 
+
+A signal is an asynchronous notification sent to a process or to a specific thread within the same process in order to notify it of an event that occurred. 
+
+When a signal is sent, the operating system interrupts the target process' normal flow of execution to deliver the signal. 
+
+There are two signals which cannot be intercepted and handled: [[SIGKILL]] and [[SIGSTOP]].
+
+Execution can be interrupted during any non-atomic instruction.
+
+## Risks
+Signal handling is vulnerable to race conditions. As signals are asynchronous, another signal (even of the same type) can be delivered to the process during execution of the signal handling routine.
+
+Use of non-[[reentrant]] functions, e.g., malloc or printf, inside signal handlers is also unsafe. In particular, the POSIX specification and the Linux man page signal(7) requires that all system functions directly or indirectly called from a signal function are [[async-signal-safe ]]
+
+---
+
+## 例子
 1. 用户输入命令，在 Shell 下启动一个前台进程。
 2. 用户按下 Ctrl-C，这个键盘输入产生一个硬件中断。
-3. 如果 CPU 当前正在执行这个进程的代码，则该进程的用户空间代码暂停执行，CPU 从用户态切换到内核态处理硬件中断。
+3. 如果 CPU 当前正在执行这个进程的代码，则该进程的用户空间代码暂停执行，CPU 从[[用户态]]切换到[[内核态]]处理硬件[[中断]]。
 4. 终端驱动程序将 Ctrl-C 解释成一个 [[SIGINT]] 信号，记在该进程的 [[PCB]] 中（也可以说发送了一个 [[SIGINT]]信号给该进程）。
 5. 当某个时刻要从内核返回到该进程的用户空间代码继续执行之前，首先处理  [[PCB]]  中记录的信号，发现有一个 [[SIGINT]]信号待处理，而这个信号的默认处理动作是终止进程，所以直接终止进程而不再返回它的用户空间代码执行。</pre>
 </div>
-<div created="20200616155602246" modified="20200626103155334" tags="signal linux" title="Signal experience" type="text/x-markdown">
+<div created="20200616155602246" modified="20200628060138365" tags="Signal" title="Signal experience" type="text/x-markdown">
 <pre>[[Note]] 
 [[graceful shutdown]]
 
@@ -19392,7 +19474,7 @@ Usually means &quot;stop what you're doing&quot; -- may or may not kill the prog
 ### [[golang]] 程序突然崩溃
 没有任何输出，捕获一些信号，发现是信号[[SIGPIPE]]导致，尝试`kill -13`。
 
-[[golang]] [[http server]] 没有忽略[[linux]]信号[[SIGPIPE]] broken pipe signal，导致程序exit。 
+[[golang]] [[http server]] 没有忽略[[Linux]]信号[[SIGPIPE]] broken pipe signal，导致程序exit。 
 [这里有一个issue](https://github.com/flike/kingshard/issues/227)</pre>
 </div>
 <div created="20200623021308349" modified="20200624162712642" tags="Signal" title="SIGPIPE" type="text/x-markdown">
@@ -19401,8 +19483,8 @@ Usually means &quot;stop what you're doing&quot; -- may or may not kill the prog
   For example `cat /etc/passwd | head -n1` will send SIGPIPE to the `cat` process after the first line is printed, causing `cat` to terminate before finishing the whole file.
 </pre>
 </div>
-<div created="20200623021821512" modified="20200624162723241" tags="Signal" title="SIGQUIT" type="text/x-markdown">
-<pre>- `Ctrl+\` sends `SIGQUIT`, where the default action is to dump core and terminate. This can be used if a program is doing something very wrong, you need to stop it immediately, and would like to be able to debug it later.
+<div created="20200623021821512" modified="20200628060004051" tags="Signal" title="SIGQUIT" type="text/x-markdown">
+<pre>- `Ctrl+\` sends `SIGQUIT`, where the default action is to dump core([[coredump]]) and terminate. This can be used if a program is doing something very wrong, you need to stop it immediately, and would like to be able to debug it later.
 
 </pre>
 </div>
@@ -19411,6 +19493,14 @@ Usually means &quot;stop what you're doing&quot; -- may or may not kill the prog
 
 Sent when you hit `CTRL+Z`
 Pauses the program, discussed above</pre>
+</div>
+<div created="20200628075810152" modified="20200628075931591" tags="Signal" title="SIGTERM" type="text/x-markdown">
+<pre>[[Signal]]
+The SIGTERM signal is a generic signal used to cause program termination.
+
+Unlike [[SIGKILL]], this signal can be blocked, handled, and ignored. It is the normal way to politely ask a program to terminate.
+
+The shell command [[kill]] generates SIGTERM by default.</pre>
 </div>
 <div created="20200616171330922" modified="20200616171330922" title="stroll">
 <pre></pre>
@@ -19614,11 +19704,17 @@ a weakly typed language has looser typing rules and may produce unpredictable re
 <div created="20200624102555223" modified="20200624102614829" tags="Development" title="WorkExperience" type="text/x-markdown">
 <pre></pre>
 </div>
-<div created="20200619184445503" modified="20200625044816750" tags="ci Computing" title="可重入vs幂等性" type="text/x-markdown">
+<div created="20200628080509933" modified="20200628080509933" title="中断">
+<pre></pre>
+</div>
+<div created="20200628080509931" modified="20200628080509931" title="内核态">
+<pre></pre>
+</div>
+<div created="20200619184445503" modified="20200628121534462" tags="ci Computing" title="可重入vs幂等性" type="text/x-markdown">
 <pre>[[Note]]
 [[Concept]]
 
-### 可重入 （[[Reentrancy]]）
+### 可重入 （[[reentrancy]]）
 
 In [computing](https://www.wikiwand.com/en/Computing), a [computer program](https://www.wikiwand.com/en/Computer_program) or [subroutine](https://www.wikiwand.com/en/Subroutine) is called **reentrant** if multiple invocations can safely run concurrently. 
 
@@ -19674,6 +19770,9 @@ https://www.zhihu.com/question/321235026/answer/659682220
 ```</pre>
 </div>
 <div created="20200621042729416" modified="20200621042729416" title="抽象">
+<pre></pre>
+</div>
+<div created="20200628080509930" modified="20200628080509930" title="用户态">
 <pre></pre>
 </div>
 <div created="20200621074220750" modified="20200621074248973" tags="Quote" title="美团ddd" type="text/x-markdown">
