--- a/wiki/index.html
+++ b/wiki/index.html
@@ -18786,8 +18786,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200628121512792" title="$:/temp/search">
-<pre>reentrant</pre>
+<div created="20200418122544376" modified="20200628152746428" title="$:/temp/search">
+<pre>tips</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19513,21 +19513,24 @@ The shell command [[kill]] generates SIGTERM by default.</pre>
 <div created="20200616171330922" modified="20200616171330922" title="stroll">
 <pre></pre>
 </div>
-<div created="20200616171219208" modified="20200623163644986" tags="" title="StrollTips" type="text/x-markdown">
+<div created="20200616171219208" modified="20200628153253250" tags="" title="StrollTips" type="text/vnd.tiddlywiki">
 <pre>[[Note]]
 [[stroll]]
 
-[origin file](https://giffmex.org/stroll/stroll.html)
+!! resources
+* [[wikiText 语法|https://tiddlywiki.com/static/WikiText.html]]
+* [[origin file|https://giffmex.org/stroll/stroll.html]]
 
-[my commits](https://github.com/YongHaoWu/YongHaoWu.github.io/commits/master)
+* [[my commits of this file|https://github.com/YongHaoWu/YongHaoWu.github.io/commits/master]]
 
-[myPublishSite](https://yonghaowu.github.io/wiki)
+* [[myPublishSite|https://yonghaowu.github.io/wiki]]
+ 
 
-## 演讲
+!! 演讲
 [[Joe Armstrong]] 
 [Joe Armstrong &amp; Jeremy Ruston - Intertwingling the Tiddlywiki with Erlang | Code Mesh LDN 18](https://www.youtube.com/watch?v=Uv1UfLPK7_Q)
 
-## 使用TiddlyWiki的人
+!! 使用TiddlyWiki的博客
 * https://wiki.zhiheng.io/
 * https://yonghaowu.github.io/life/
 * https://diamondyuan.github.io/wiki/TiddlyWiki.html
