--- a/wiki/index.html
+++ b/wiki/index.html
@@ -205,6 +205,8 @@ Error message and password prompt
 
 <li>$:/config/AutoSave</li>
 
+<li>$:/config/codemirror/keyMap</li>
+
 <li>$:/config/DownloadSaver/AutoSave</li>
 
 <li>$:/config/EditorTypeMappings/text/vnd.tiddlywiki</li>
@@ -252,6 +254,20 @@ Error message and password prompt
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/share</li>
 
 <li>$:/config/RelinkOnRename</li>
+
+<li>$:/config/shortcuts-mac/heading-4</li>
+
+<li>$:/config/shortcuts-mac/heading-5</li>
+
+<li>$:/config/shortcuts-mac/heading-6</li>
+
+<li>$:/config/shortcuts/excise</li>
+
+<li>$:/config/shortcuts/heading-1</li>
+
+<li>$:/config/shortcuts/heading-2</li>
+
+<li>$:/config/shortcuts/heading-3</li>
 
 <li>$:/config/TextEditor/EditorHeight/Mode</li>
 
@@ -416,6 +432,20 @@ Error message and password prompt
 <li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/tahoelafs</li>
 
 <li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/text-slicer</li>
+
+<li>$:/state/dropdown/keyboardshortcut/excise-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/heading-1-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/heading-2-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/heading-3-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/heading-4-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/heading-5-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/heading-6-286565879</li>
 
 <li>$:/state/editpreviewtype</li>
 
@@ -1666,6 +1696,10 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200619183447964" modified="20200619185217096" title="$:/config/AutoSave">
 <pre>no</pre>
 </div>
+<div created="20200628154859021" modified="20200628154859021" title="$:/config/codemirror/keyMap" type="string">
+<pre>vim
+</pre>
+</div>
 <div created="20200616145157008" modified="20200616145157008" title="$:/config/DownloadSaver/AutoSave">
 <pre>yes</pre>
 </div>
@@ -1737,6 +1771,27 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 </div>
 <div bag="default" created="20200106214031452" modified="20200626125021978" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki">
 <pre>no</pre>
+</div>
+<div created="20200628155022332" modified="20200628155022332" title="$:/config/shortcuts-mac/heading-4">
+<pre>cmd-4</pre>
+</div>
+<div created="20200628155027912" modified="20200628155027912" title="$:/config/shortcuts-mac/heading-5">
+<pre>cmd-5</pre>
+</div>
+<div created="20200628155034295" modified="20200628155034295" title="$:/config/shortcuts-mac/heading-6">
+<pre>cmd-6</pre>
+</div>
+<div created="20200628154931432" modified="20200628154931432" title="$:/config/shortcuts/excise">
+<pre></pre>
+</div>
+<div created="20200628154952598" modified="20200628154955304" title="$:/config/shortcuts/heading-1">
+<pre>cmd-1</pre>
+</div>
+<div created="20200628155004884" modified="20200628155005847" title="$:/config/shortcuts/heading-2">
+<pre>cmd-2</pre>
+</div>
+<div created="20200628155012041" modified="20200628155015081" title="$:/config/shortcuts/heading-3">
+<pre>cmd-3</pre>
 </div>
 <div created="20200521173043182" modified="20200619185428907" title="$:/config/TextEditor/EditorHeight/Mode">
 <pre>auto</pre>
@@ -17458,6 +17513,27 @@ exports.context = contextWidget;
 <div created="20200624160517966" modified="20200624160517966" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/plugins/tiddlywiki/text-slicer">
 <pre>yes</pre>
 </div>
+<div created="20200628154926773" modified="20200628154926773" title="$:/state/dropdown/keyboardshortcut/excise-286565879">
+<pre>open</pre>
+</div>
+<div created="20200628154947733" modified="20200628154958221" title="$:/state/dropdown/keyboardshortcut/heading-1-286565879">
+<pre>close</pre>
+</div>
+<div created="20200628154959285" modified="20200628154959285" title="$:/state/dropdown/keyboardshortcut/heading-2-286565879">
+<pre>open</pre>
+</div>
+<div created="20200628155008528" modified="20200628155008528" title="$:/state/dropdown/keyboardshortcut/heading-3-286565879">
+<pre>open</pre>
+</div>
+<div created="20200628155017953" modified="20200628155017953" title="$:/state/dropdown/keyboardshortcut/heading-4-286565879">
+<pre>open</pre>
+</div>
+<div created="20200628155025184" modified="20200628155025184" title="$:/state/dropdown/keyboardshortcut/heading-5-286565879">
+<pre>open</pre>
+</div>
+<div created="20200628155030387" modified="20200628155030387" title="$:/state/dropdown/keyboardshortcut/heading-6-286565879">
+<pre>open</pre>
+</div>
 <div created="20200616170421212" modified="20200616170421212" title="$:/state/editpreviewtype">
 <pre>$:/core/ui/EditTemplate/body/preview/output</pre>
 </div>
@@ -17560,11 +17636,11 @@ exports.context = contextWidget;
 <div created="20200616150438012" modified="20200616150442894" title="$:/state/tab--1638394651">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418132348763" modified="20200625045639075" title="$:/state/tab--1963855381">
+<div created="20200418132348763" modified="20200628154805173" title="$:/state/tab--1963855381">
 <pre>$:/plugins/sq/Stories/settings</pre>
 </div>
-<div created="20200616145129728" modified="20200626105543517" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Basics</pre>
+<div created="20200616145129728" modified="20200628154646056" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
 <div created="20200429214724797" modified="20200624155521434" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Plugins</pre>
@@ -17572,14 +17648,14 @@ exports.context = contextWidget;
 <div created="20200423200357785" modified="20200423200357785" title="$:/state/tab--509593366">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20200619183736594" modified="20200626110442683" title="$:/state/tab--697582678">
-<pre>$:/core/ui/ControlPanel/Settings/TiddlyWiki</pre>
+<div created="20200619183736594" modified="20200628154849856" title="$:/state/tab--697582678">
+<pre>$:/core/ui/ControlPanel/Settings/CodeMirror</pre>
 </div>
 <div created="20200429214732957" modified="20200624162232241" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200619183706276" modified="20200625051757709" title="$:/state/tab--959111941">
-<pre>$:/core/ui/ControlPanel/LoadedModules</pre>
+<div created="20200619183706276" modified="20200628154723211" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
 <div created="20200423200356184" modified="20200423200356184" title="$:/state/tab-102244450">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
@@ -17593,7 +17669,7 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200628082405475" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200626110501153" title="$:/state/tab-1749438307">
+<div created="20200418121928767" modified="20200628155051927" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
@@ -17605,8 +17681,8 @@ exports.context = contextWidget;
 <div created="20200418121835270" modified="20200628053749401" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
-<div created="20200504200956301" modified="20200625045453184" title="$:/state/tabs/controlpanel/toolbars-1345989671">
-<pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
+<div created="20200504200956301" modified="20200628154740169" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
 </div>
 <div created="20200625045056386" modified="20200625045058381" title="$:/state/tag-manager/Computing">
 <pre>closed</pre>
@@ -17740,7 +17816,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200626105514614" list="可重入vs幂等性 StrollTips PCB SIGHUP SIGINT Signal SIGTERM [[graceful restart]] Bash [[graceful shutdown]] [[Signal experience]] Linux LinuxTools GDB IPC coredump SIGQUIT Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628121515617" title="$:/StoryList">
+<div created="20200626105514614" list="可重入vs幂等性 StrollTips PCB SIGHUP SIGINT Signal SIGTERM [[graceful restart]] Bash [[graceful shutdown]] [[Signal experience]] Linux LinuxTools GDB IPC coredump SIGQUIT Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628155049815" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
