--- a/wiki/index.html
+++ b/wiki/index.html
@@ -245,6 +245,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/danielo515/autotag</li>
 
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/filesystem</li>
@@ -920,6 +922,8 @@ Error message and password prompt
 <li>Development</li>
 
 <li>docker</li>
+
+<li>Draft of '可重入vs幂等性'</li>
 
 <li>etcd 无法watch</li>
 
@@ -1745,16 +1749,19 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616152921246" modified="20200616152930719" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/language">
 <pre>hide</pre>
 </div>
-<div created="20200504150621926" modified="20200521145820607" tags="$:/giffmex/stroll" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
-<pre>show</pre>
-</div>
-<div created="20200616155448618" modified="20200616155448618" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
+<div created="20200504150621926" modified="20200628155642656" tags="$:/giffmex/stroll" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
 <pre>hide</pre>
+</div>
+<div created="20200616155448618" modified="20200628155622606" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
+<pre>show</pre>
 </div>
 <div created="20200616184144411" modified="20200616184144411" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager">
 <pre>show</pre>
 </div>
 <div created="20200616155434955" modified="20200616155444398" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all">
+<pre>hide</pre>
+</div>
+<div created="20200628155618154" modified="20200628155618154" title="$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button">
 <pre>hide</pre>
 </div>
 <div created="20200625052047284" modified="20200625052047284" title="$:/config/Plugins/Disabled/$:/plugins/danielo515/autotag">
@@ -17636,10 +17643,10 @@ exports.context = contextWidget;
 <div created="20200616150438012" modified="20200616150442894" title="$:/state/tab--1638394651">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418132348763" modified="20200628154805173" title="$:/state/tab--1963855381">
-<pre>$:/plugins/sq/Stories/settings</pre>
+<div created="20200418132348763" modified="20200628155725336" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20200616145129728" modified="20200628154646056" title="$:/state/tab--2112689675">
+<div created="20200616145129728" modified="20200628155550350" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
 <div created="20200429214724797" modified="20200624155521434" title="$:/state/tab--219645345">
@@ -17648,14 +17655,14 @@ exports.context = contextWidget;
 <div created="20200423200357785" modified="20200423200357785" title="$:/state/tab--509593366">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20200619183736594" modified="20200628154849856" title="$:/state/tab--697582678">
+<div created="20200619183736594" modified="20200628155755249" title="$:/state/tab--697582678">
 <pre>$:/core/ui/ControlPanel/Settings/CodeMirror</pre>
 </div>
 <div created="20200429214732957" modified="20200624162232241" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200619183706276" modified="20200628154723211" title="$:/state/tab--959111941">
-<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
+<div created="20200619183706276" modified="20200628155807287" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
 <div created="20200423200356184" modified="20200423200356184" title="$:/state/tab-102244450">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
@@ -17666,10 +17673,10 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200625051821012" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200624162006372" modified="20200628082405475" title="$:/state/tab-1528275152">
+<div created="20200624162006372" modified="20200628161251592" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200628155051927" title="$:/state/tab-1749438307">
+<div created="20200418121928767" modified="20200628155803586" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
@@ -17678,10 +17685,10 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200628053749401" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20200418121835270" modified="20200628161450094" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200504200956301" modified="20200628154740169" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
 </div>
 <div created="20200625045056386" modified="20200625045058381" title="$:/state/tag-manager/Computing">
@@ -17816,7 +17823,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200626105514614" list="可重入vs幂等性 StrollTips PCB SIGHUP SIGINT Signal SIGTERM [[graceful restart]] Bash [[graceful shutdown]] [[Signal experience]] Linux LinuxTools GDB IPC coredump SIGQUIT Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628155049815" title="$:/StoryList">
+<div created="20200626105514614" list="可重入vs幂等性 StrollTips PCB SIGHUP SIGINT Signal SIGTERM [[graceful restart]] Bash [[graceful shutdown]] [[Signal experience]] Linux LinuxTools GDB IPC coredump SIGQUIT Development Debug Tips [[Programming language]] WorkExperience Virtualization $:/Import 听雨 [[Liberal arts]] Literature [[Chinese  literature]] Poems [[Papers From Zhihu]] 美团ddd [[Books From Zhihu]] History 广告词过滤 [[Positive lookbehind]] [[Capturing group]] [[Type Theory]] [[Algebraic data type]]" modified="20200628155532112" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -18862,8 +18869,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200628152746428" title="$:/temp/search">
-<pre>tips</pre>
+<div created="20200418122544376" modified="20200628161448675" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19144,6 +19151,27 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 </div>
 <div created="20200622110429773" modified="20200622110429773" title="docker">
 <pre></pre>
+</div>
+<div created="20200628155116099" modified="20200628155116099" title="Draft of '可重入vs幂等性'">
+<pre>[[Note]]
+[[Concept]]
+
+### 可重入 （[[reentrancy]]）
+
+In [computing](https://www.wikiwand.com/en/Computing), a [computer program](https://www.wikiwand.com/en/Computer_program) or [subroutine](https://www.wikiwand.com/en/Subroutine) is called **reentrant** if multiple invocations can safely run concurrently. j
+
+[[Reentrancy]] is not the same thing as [idempotence](https://www.wikiwand.com/en/Idempotence), in which the function may be called more than once yet generate exactly the same output as if it had only been called once. 
+
+
+
+#### 幂等性（[[Idempotence]]）
+
+**Idempotence** whereby they can be applied multiple times without changing the result beyond the initial application. 
+
+
+
+- in [imperative programming](https://www.wikiwand.com/en/Imperative_programming), a [subroutine](https://www.wikiwand.com/en/Subroutine) with [side effects](https://www.wikiwand.com/en/Side_effect_(computer_science)) is idempotent if the system state remains the same after one or several calls, in other words if the function from the system state space to itself associated to the subroutine is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition);
+- in [functional programming](https://www.wikiwand.com/en/Functional_programming), a [pure function](https://www.wikiwand.com/en/Pure_function) is idempotent if it is idempotent in the mathematical sense given in the [definition](https://www.wikiwand.com/en/Idempotence#Definition).</pre>
 </div>
 <div created="20200617041601630" modified="20200617041630776" tags="etcd" title="etcd 无法watch" type="text/x-markdown">
 <pre>[auth token invalid after watch reconnects](https://github.com/etcd-io/etcd/issues/11954)</pre>
